# hector_stairs_planner

./: LICENSE  README.md
hector_aggregate_scan/: CMakeLists.txt  package.xml
hector_aggregate_scan/include/hector_aggregate_scan/: hector_aggregate_scan.h
hector_aggregate_scan/launch/: hector_aggregate_scan.launch
hector_aggregate_scan/src/: hector_aggregate_scan.cpp  hector_aggregate_scan_node.cpp
hector_change_layer_msgs/: CMakeLists.txt  package.xml
hector_change_layer_msgs/msg/: Change_layer_msg.msg  MapLayerList.msg
hector_change_map/: CMakeLists.txt  package.xml
hector_change_map/cfg/: HectorChangeMap.cfg
hector_change_map/include/hector_change_map/: hector_change_map.h
hector_change_map/launch/: .hector_change_map_adipec_2017_scenario.launch.kate-swp  hector_change_map.launch  hector_change_map_adipec_2017_scenario.launch  hector_change_map_mini_umad.launch  hector_change_map_taurob_test_arena_v1.launch  hector_change_map_test_garage.launch  hector_change_map_tuda_test_arena_v1.launch  hector_change_map_umad_default.launch
hector_change_map/src/: hector_change_map.cpp  hector_change_map_node.cpp
hector_sbpl_flipper_control_env/: CMakeLists.txt  package.xml
hector_sbpl_flipper_control_env/include/hector_sbpl_flipper_control_env/: hector_sbpl_flipper_control_env.h
hector_sbpl_flipper_control_env/src/: hector_sbpl_flipper_control_env.cpp
hector_sbpl_stairs_planner/: CMakeLists.txt  package.xml  stairs_planner_plugin.xml
hector_sbpl_stairs_planner/config/: argo.yaml  hector_open_source.yaml  hector_sbpl_stairs_planner.xml  hector_sbpl_stairs_planner_hector_open_source.xml
hector_sbpl_stairs_planner/include/hector_sbpl_stairs_planner/: hector_sbpl_stairs_planner.h
hector_sbpl_stairs_planner/launch/: hector_sbpl_stairs_planner.launch  hector_sbpl_stairs_planner_hector.launch
hector_sbpl_stairs_planner/mprim/: argo_mprim_test.mprim  genmprim_obelix_tests.m  mprimBene.mprim  mprimHightTurningCost.mprim  mprim_obelix_v1.mprim  mprim_obelix_v11.mprim  mprim_obelix_v11_with_backwards.mprim
hector_sbpl_stairs_planner/src/: hector_sbpl_stairs_planner.cpp  hector_sbpl_stairs_planner_test_node.cpp
hector_stairs_planner_disruption_test/: CMakeLists.txt  package.xml
hector_stairs_planner_disruption_test/config/: params.yaml
hector_stairs_planner_disruption_test/include/hector_stairs_planner_disruption_test/: hector_stairs_planner_disruption_test.h
hector_stairs_planner_disruption_test/launch/: hector_stairs_planner_disruption_test.launch
hector_stairs_planner_disruption_test/src/: hector_stairs_planner_disruption_test.cpp  hector_stairs_planner_disruption_test_node.cpp
hector_stairs_planner_msgs/: CMakeLists.txt  package.xml
hector_stairs_planner_msgs/msg/: Path_segment.msg  Path_with_Flipper.msg
