<?xml version="1.0"?>
<package>
  <name>hector_sbpl_flipper_control_env</name>
  <version>0.0.0</version>
  <description>hector_sbpl_flipper_control_env</description>
  <maintainer email="benedikt@todo.todo">Benedikt Wartusch</maintainer>
  <author>Benedikt Wartusch</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>visualization_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>sensor_msgs</build_depend>

<run_depend>roscpp</run_depend>
<run_depend>rospy</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>visualization_msgs</run_depend>
<run_depend>geometry_msgs</run_depend>
<run_depend>sensor_msgs</run_depend>
  
  <export>
<!--
 Other tools can request additional information be placed here 
-->
<cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lhector_sbpl_flipper_control_env"/>
</export>

</package>


