<?xml version="1.0"?>
<package>
  <name>hector_sbpl_stairs_planner</name>
  <version>0.0.0</version>
  <description>hector_sbpl_stairs_planner</description>
  <maintainer email="benedikt@todo.todo">Benedikt Wartusch</maintainer>
  <author>Benedikt Wartusch</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>nav_msgs</build_depend>
<build_depend>sbpl</build_depend>
<build_depend>tf</build_depend>
<build_depend>pcl_conversions</build_depend>
<build_depend>hector_sbpl_flipper_control_env</build_depend>
<build_depend>pluginlib</build_depend>
<build_depend>nav_core</build_depend>
<build_depend>hector_stair_detection_msgs</build_depend>
<build_depend>hector_stairs_planner_msgs</build_depend>

<run_depend>roscpp</run_depend>
<run_depend>rospy</run_depend>
<run_depend>geometry_msgs</run_depend>
<run_depend>nav_msgs</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>sbpl</run_depend>
<run_depend>tf</run_depend>
<run_depend>pcl_conversions</run_depend>
<run_depend>hector_sbpl_flipper_control_env</run_depend>
<run_depend>pluginlib</run_depend>
<run_depend>nav_core</run_depend>
<run_depend>hector_stair_detection_msgs</run_depend>
<run_depend>hector_stairs_planner_msgs</run_depend>
  
  <export>
<!--
 Other tools can request additional information be placed here 
-->
<nav_core plugin="${prefix}/stairs_planner_plugin.xml" />
<cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lhector_sbpl_stairs_planner"/>
</export>

</package>


